@@ -1,5 +1,9 @@
 2007-02-17  Akim Demaille  <akim.demaille@free.fr>
 
+	* src/uexpression.cc (to_string): New, for UExpression::Type.
+
+2007-02-17  Akim Demaille  <akim.demaille@free.fr>
+
 	Adjust to *maps becoming SingletonPtr
 	* src/ucommand.cc, src/uobj.cc, src/userver.cc, src/uvar.cc,
 	* src/uvariablename.cc: Catch up with changes in liburbi-cpp
